modificaciones backend